# dsan5810-final-project

./: .gitignore  CHANGELOG.md  HELPFUL-COMMANDS.md  HELPFUL-COMMANDS.txt  README.md  austin-llama-test.py  evaluation.ipynb  finetuning-hf.ipynb  finetuning-steps.md  finetuning.py  get_llama_7b_4-16_att2.ipynb  load_att_3.ipynb  synthetic-math.ipynb  test.py
.Trash-0/info/: evaluation.ipynb.trashinfo  py-pkgs-cookiecutter.trashinfo
docs/: Makefile  example.ipynb  make.bat
docs/.ipynb_checkpoints/: conf-checkpoint.py
final_workflow/: README.md
final_workflow/.ipynb_checkpoints/: get_data-checkpoint.ipynb  model-eval-checkpoint.ipynb
final_workflow/eval/: results-model-llama-dataset-math.txt  results-model-llama-dataset-mmlu.txt  results-model-math-dataset-math.txt  results-model-math-dataset-mmlu.txt  results-model-math-dataset-qa.txt  results-model-mathqa-dataset-math.txt  results-model-mathqa-dataset-mmlu.txt  results-model-mathqa-dataset-qa.txt
final_workflow/eval/.ipynb_checkpoints/: eval-checkpoint.py  (+7 more)
final_workflow/train/: math_training.py  qa_training.py
info/: HELPFUL-COMMANDS.md  HELPFUL-COMMANDS.txt  LICENSE  pyproject.toml
sandbox/: austin-llama-test.py
src/python/: __init__.py
tests/: test_python.py
trial-error/: README.md  finetuning-hf.ipynb  get_llama_7b_4-16_att2.ipynb  helm-run.txt  helm-summarize.txt  load_att_3.ipynb  matt-evaluation.ipynb
trial-error/evaluation/: evaluation.ipynb
trial-error/z_archive/: distilbert_classification_qa.ipynb  helm_commands.txt  rename_model.ipynb  run_specs.conf  save.conf  test.conf
(+5 files in other folders)
