[tool.poetry]
name = "python"
version = "0.0.0"
description = "Anly5810 Final Project Group 4"
authors = ["Austin Barish"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
